# NotebookLM-RAG-companion

./: .gitignore  NotebookLM-Companion-macos.spec  NotebookLM-Companion-windows.spec  README.md  pyproject.toml
.github/workflows/: release.yml
notebooklm_companion/: __init__.py  cli.py  core.py  gui_app.py
