[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooklm-companion"
version = "0.1.0"
description = "Generate NotebookLM-optimised companion Markdown from academic PDFs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pypdf>=4.0.0"
]

[project.scripts]
notebooklm-companion = "notebooklm_companion.cli:run"
